--- a/views/listing/show.ejs
+++ b/views/listing/show.ejs
@@ -1,10 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Show Specific Hotel Data</title>
-</head>
+<% layout("/layouts/boilerplate.ejs") %>
+
 <body>
      <h3><%= singleData.title %></h3>
      <ul>
@@ -21,4 +16,3 @@
      </form>
 
 </body>
-</html>
