29/01-Designing_ADDforms-components-EditForm-components

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,6 +3,13 @@ body{
   font-optical-sizing: auto;
   font-weight: 400;
   font-style: normal;
+  display: flex;
+  flex-direction: column;
+  min-height: 100;
+}
+
+.container{
+    flex:1;
 }
 
 .navbar{
@@ -85,4 +92,11 @@ body{
 .card-img-overlay:hover {
     opacity: 0.2;
     background-color: whitesmoke;
+}
+
+.add-btn,
+.edit-btn
+{
+    background-color: #fe424d !important;
+    border: none !important;
 }
