--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -1,6 +1,6 @@
 <footer>
     <div class="f-info">
-        <div class="f-info-social">
+        <div class="f-info-socials">
             <i class="fa-brands fa-instagram"></i>
             <i class="fa-brands fa-linkedin"></i>
             <i class="fa-brands fa-twitter"></i>
