--- a/views/listing/show.ejs
+++ b/views/listing/show.ejs
@@ -2,9 +2,9 @@
 
    <div class="row mt-3">
       <div class="col-8 offset-2">
-         <h2>
-            Details of <%= singleData.title %>
-         </h2>
+         <h3>
+           <b> Hotel Details </b>
+         </h3>
       </div>
       <div class="col-6 offset-2">
 
@@ -14,8 +14,8 @@
                <div class="card-body">
                   <p class="card-text">
                      <b>
-                        <%= singleData.title %>
-                     </b> <br />
+                       <h5> <i><%= singleData.title %></i></h5>
+                     </b> 
                      <%= singleData.description %><br />
                         ₹<%= singleData.price.toLocaleString("en-IN") %> <br />
                            <%= singleData.location %><br />
@@ -41,5 +41,5 @@
             </div>
       </div>
 
-   </div><br />
+   </div>
    </body>
