--- a/views/listing/EditHotelData.ejs
+++ b/views/listing/EditHotelData.ejs
@@ -6,41 +6,55 @@
             <div class="col-8 mt-3 offset-2">
                 <h2>Enter Details to edit form!</h2>
 
-                <form method="POST" action="/listings/<%= editHoteldata._id %>?_method=PUT">
+                <form method="POST" action="/listings/<%= editHoteldata._id %>?_method=PUT" novalidate class="needs-validation">
                     <div class="mb-3"><label class="form-label">Hotel Name:</label>
                         <input type="text" class="form-control" value="<%= editHoteldata.title %>" id="title"
-                            name="ListingsArr[title]">
+                            name="ListingsArr[title]" required>
+                            <div class="valid-feedback">Title</div>
+                             <div class="invalid-feedback">Enter a valid title!</div>
                     </div>
 
                     <div class="mb-3"><label class="form-label">Description:</label>
                         <textarea name="ListingsArr[description]" id="description" class="form-control"
-                            name="description"><%= editHoteldata.description %></textarea>
+                            name="description" required><%= editHoteldata.description %></textarea>
+                            <div class="valid-feedback">Good!</div>
+                             <div class="invalid-feedback">Enter a valid description!</div>
                     </div>
 
                     <div class="row">
                         <div class="col-md-4 mb-3"><label class="form-label">Price:</label>
                             <input type="number" class="form-control" value="<%= editHoteldata.price %>" id="price"
-                                name="ListingsArr[price]">
+                                name="ListingsArr[price]" required>
+                                <div class="valid-feedback">Nice price</div>
+                             <div class="invalid-feedback">Enter a valid price!</div>
                         </div>
                         <div class="col-md-8 mb-3"><label class="form-label">country:</label>
                             <input type="text" class="form-control" value="<%= editHoteldata.country %>" id="country"
-                                name="ListingsArr[country]">
+                                name="ListingsArr[country]" required>
+                                <div class="valid-feedback">Nice country</div>
+                             <div class="invalid-feedback">Enter a valid country!</div>
                         </div>
                     </div>
 
                     <div class="mb-3"><label class="form-label">location:</label>
                         <input type="text" class="form-control" id="location" value="<%= editHoteldata.location %>"
-                            name="ListingsArr[location]">
+                            name="ListingsArr[location]" required>
+
+                            <div class="valid-feedback">Nice location</div>
+                             <div class="invalid-feedback">Enter a valid location!</div>
                     </div>
 
 
                     <div class="mb-3"><label class="form-label">image:</label>
-                        <input type="text" class="form-control" value="<%= editHoteldata.image  %>" id="image"
-                            name="ListingsArr[image]">
+                        <input type="text" class="form-control" value="<%= editHoteldata.image.url  %>" id="image"
+                            name="ListingsArr[image][url]">
+                            <!-- here we need only imgae url to display image so if we use only [image] it access whole body/obj so we need [image][url] -->
+                             <!-- so  value="<%= editHoteldata.image.url  %> is used to use image url we need .url to access image. -->
                     </div>
 
-                    <button type="button" class="btn btn-dark edit-btn mt-3">Apply Changes</button><br><br><br>
+                    <button type="submit" class="btn btn-dark edit-btn mt-3">Apply Changes</button><br><br><br>
                 </form>
             </div>
         </div>
+        <script src="js/script.js"></script>
     </body>
