--- a/views/listing/show.ejs
+++ b/views/listing/show.ejs
@@ -27,12 +27,12 @@
                   <div class="d-flex gap-2 mt-3">
 
                      <form method="GET" action="/listings/<%=singleData._id%>/edit">
-                        <button type="button" class="btn btn-primary">Edit</button>
+                        <button type="submit" class="btn btn-primary">Edit</button>
                      </form>
 
 
                      <form method="POST" action="/listings/<%=singleData._id%>?_method=DELETE">
-                        <button type="button" class="btn btn-danger">Delete</button>
+                        <button type="submit" class="btn btn-danger">Delete</button>
                      </form>
                   </div>
 
