--- a/views/listing/AddnewHotel.ejs
+++ b/views/listing/AddnewHotel.ejs
@@ -36,7 +36,7 @@
                     </div>
                     <div class="row">
                         <div class="col-md-4 mb-3"><label for="price" class="form-label">Price:</label>
-                            <input type="number" placeholder="Enter best price" class="form-control" id="price"
+                            <input type="text" placeholder="Enter best price" class="form-control" id="price"
                                 name="ListingsArr[price]" required>
                                 <div class="valid-feedback">good price</div>
                              <div class="invalid-feedback">Enter a valid price!</div>
