--- a/views/listing/EditHotelData.ejs
+++ b/views/listing/EditHotelData.ejs
@@ -23,7 +23,7 @@
 
                     <div class="row">
                         <div class="col-md-4 mb-3"><label class="form-label">Price:</label>
-                            <input type="number" class="form-control" value="<%= editHoteldata.price %>" id="price"
+                            <input type="text" class="form-control" value="<%= editHoteldata.price %>" id="price"
                                 name="ListingsArr[price]" required>
                                 <div class="valid-feedback">Nice price</div>
                              <div class="invalid-feedback">Enter a valid price!</div>
